# lnx_hw_simle_project

./: Makefile.am  README.md  configure.ac  hello_func.c  hello_make.h
